# solvency2-data

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  404.html  AUTHORS.rst  CONTRIBUTING.rst  EIOPA_RFR_20171231_PD_Cod.xlsx  EIOPA_RFR_20171231_Term_Structures.xlsx  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  api_docs.html  api_example.html  api_example.ipynb  contributing.html  history.html  index.html  installation.html  mkdocs.yml  objects.inv  pyproject.toml  readthedocs.yaml  requirements.txt  ruff.toml  setup.cfg  setup.py  sitemap.xml  tox.ini  usage.html
.github/: ISSUE_TEMPLATE.md
_build/doctrees/: api_example.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  readme.doctree  requirements.doctree  usage.doctree
_build/html/: api_example.html  contributing.html  genindex.html  index.html  (+9 more)
api_docs/: index.html
api_example/: index.html
contributing/: index.html
docs/: Makefile  README.md  api_docs.md  api_example.ipynb  api_example.md  conf.py  contributing.md  history.md  index.md  index.rst  installation.md  installation.rst  make.bat  requirements.txt  usage.md  usage.rst
history/: index.html
installation/: index.html
search/: search_index.json
solvency2_data/: __init__.py  alternative_extrapolation.py  eiopa_data.py  rfr.py  scraping.py  smith_wilson.py  solvency2_data.cfg  solvency2_data.py  sqlite_handler.py  util.py
solvency2_rfr/: __init__.py  solvency2_rfr.py
tests/: __init__.py  test_alt_extrapolation.py  test_rfr.py  test_solvency2_data.py  test_solvency2_rfr.py
usage/: index.html
(+25 files in other folders)
